Fixes alignment
* Now the input fields for users and their roles are
  properly aligned with the clear and remove buttons

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -1015,12 +1015,12 @@ a.remove_parent, a.hide_parent {
   float: right;
   font-weight: bold;
   font-family: Arial, sans-serif;
-  font-size: 20px;
+  font-size: 17px;
   &:hover{
     text-decoration: none;
   }
   &:after {
-    content: "×";
+    content: "x";
   }
 }
 #error a.hide_parent {
